--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 		<module>twitter-to-kafka-service</module>
         <module>app-config-data</module>
 		<module>kafka</module>
+		<module>common-config</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -40,6 +41,9 @@
 		<lombok.version>1.18.30</lombok.version>
 		<httpclient.version>4.5.14</httpclient.version>
 		<json.version>20240303</json.version>
+		<avro.version>1.12.0</avro.version>
+		<spring-kafka.version>3.3.0</spring-kafka.version>
+		<spring-retry.version>2.0.10</spring-retry.version>
 	</properties>
 
 	<dependencyManagement>
@@ -48,6 +52,11 @@
 			<dependency>
 				<groupId>com.microservices.demo</groupId>
 				<artifactId>app-config-data</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.microservices.demo</groupId>
+				<artifactId>common-config</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
@@ -60,6 +69,21 @@
 				<artifactId>spring-boot-starter-test</artifactId>
 				<version>${spring-boot.version}</version>
 				<scope>test</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.kafka</groupId>
+				<artifactId>spring-kafka</artifactId>
+				<version>${spring-kafka.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.retry</groupId>
+				<artifactId>spring-retry</artifactId>
+				<version>${spring-retry.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-webflux</artifactId>
+				<version>${spring-boot.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.twitter4j</groupId>
@@ -86,6 +110,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-configuration-processor</artifactId>
 				<optional>true</optional>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.avro</groupId>
+				<artifactId>avro</artifactId>
+				<version>${avro.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
