--- a/twitter-to-kafka-service/pom.xml
+++ b/twitter-to-kafka-service/pom.xml
@@ -17,6 +17,14 @@
             <artifactId>app-config-data</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.microservices.demo</groupId>
+            <artifactId>kafka-admin</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.microservices.demo</groupId>
+            <artifactId>kafka-producer</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
@@ -40,7 +48,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
-            <version>3.2.4</version>
         </dependency>
     </dependencies>
 
